public/assets/css/style.css
/* index */
/* ______________________________________ */


/* button on index */
.started {
  background-color: brown;
  border-color: crimson;
  padding: .99rem;
  float: right;
  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

/* about us image */
.img-fluid{
  margin-top: 24px;
}


/* about columns */
.column {
    float: left;
    width: 50%;
}

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

.satiable-aboutme{
  font-family: 'Josefin Slab', serif;
}
/* ___________ */

#reviews{
  text-align: center;
  /* font-family: 'Josefin Slab', arial; */

}

#written-reviews{
  text-align: center;
  font-size:10;
}


/* typer */
.typer {
  font-size: 28px;
  /* background-color: #f8f9fa!important; */
  margin-right: 20%;
  margin-left: 30%;
  /* font-family: arial; */
  margin: 38% auto 0px;
  display: inline-block;
  font-family: 'Archivo Black', sans-serif;
  padding-bottom: 70px;
}

#index-card{
/* opacity: 0.33; */
}

.parallax {
    /* The image used */
    background-image: url("../img/ben-duchac-66002-unsplash.jpg");

    /* Set a specific height */
    min-height: 500px;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}



/* background */

#body-index {
  background: url("../img/ben-duchac-66002-unsplash.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.picnic {
  padding: 5%;
  min-height: 800px;
  height: auto;
}

/* footer */

.footer {
  position: fixed;
  width: 100%;
  bottom: 0%;
  /* background-color: rgb(196, 196, 196); */
  background-color: #f8f9fa!important;
  text-align: center;
  font-size: 10px;
}

/* LOGIN.handlebars CSS */
/* __________________________________ */

.login {
margin-top: 60px;
width: 60%;
margin-left: auto;
margin-right: auto;
}

#card-login{
  background-color: white;
  margin-top: 80px;
  height: 50%;
}
.card-body-login {
  margin-top: 50px;
}

#login-background{
  background: url("http://i65.tinypic.com/fav8xx.jpg");
  background-size:cover;

}

/* button login */
#login-btn {
  margin-bottom: 40px;
}

/* __________________________________________ */
/* CREATE PROFILE CSS */

#createprofile-body{
  background: url('https://images.unsplash.com/photo-1527462414896-5839a285978f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=44767c84c0eddfe8def07b5402df98ff&auto=format&fit=crop&w=634&q=80');
  background-size: cover;
}

#createprofile-card{
  margin-top: 40px;
}


.form-control-cp {
  width: 20%;
}

.createinput {
  margin-left: 20px;
  margin-top: 60px;
}


#createprofile{
  padding-bottom: 100px;
}

/* _____________________________________________________ */
/* User Navigation Page */

#usernav-card{
  text-align: left;
  padding-top: 60px;
  width: 560px;
}


#usernavbody {
  background: url("https://images.unsplash.com/photo-1497465135434-9dc15238075a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a95358b94233609343f39d0fed9e169a&auto=format&fit=crop&w=2524&q=80");
  background-size:cover;
}

.usernavheader {
  text-align: center;
}

.card-header {
  text-align: center;
}













/* _____________________________________________ */
/* create EVENT Page */

#event-background {
    background: url("../img/liana-mikah-393893-unsplash.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}


#event {
  margin: 5%;
}


#event-submit {
  align-content: center;
  width: 30%;
  height: 60px;
  background-color: rgb(121, 118, 118);
  border-color:rgb(235, 235, 235);
  padding: .99rem;
  transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

